@@ -1,4 +1,15 @@
-DIST umodpack-0.5b16-allinone.tar.gz 3605080 SHA256 e4b291c333812efba65277feff45d7da132515a7945780f7df3b127793f9dedd
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST umodpack-0.5b16-allinone.tar.gz 3605080 SHA256 e4b291c333812efba65277feff45d7da132515a7945780f7df3b127793f9dedd SHA512 3678507c7aec30043f50f5519935e2d5eb7471b5e0692ba8b27c506bdd7a067fdb055e6731a6bffb04bb3008020c889f3486624a1466a77e0eab3e5139003ff0 WHIRLPOOL 8a453246832feefa333ea78a8ee176903ddc538fe489c5cf4fa3c5ee5c2e075dd1b379b69c2b0f88b4a0e64a0d4386dba0b94902fe32aa36ecfb6c893a0882b3
 EBUILD umodpack-0.5_beta16-r1.ebuild 1150 SHA256 b56bbccf24c46debfab59dd1bd69f8866cb973c9dfdcac84e42c0ef37e7aaa11 SHA512 57d5b1ff25dcec868598fd1d81902c02b7eaefe70ae78dcddb1c5db51713d4ab1703dec0005809d67e1f789d43086b4df90f36ee2d8434ed68a93481f644827a WHIRLPOOL 49197df07914641b59546cac66583e9fe169328b1edf4fa7235bc030c94225b9c8c7a46921b4d6ef29f62ba4a03c00c088055c6d533309bbaf5001f63cf1c3e4
-MISC ChangeLog 1642 SHA256 9c8d80f07c77d507e18633b6d5723601e1c6fae9bd8f0245556392d409d11b39 SHA512 258685e28423fbf2fd72e355bfdc7c6175450e329b4a8bd67a750ae9ff20d51f5225f769fdb7c7ae1f19ca4ff7caf61e5dfdd088b4325b1c4117203da90ef4c3 WHIRLPOOL a304502c9aeeec6ccf0e147bb96d2687187689655854f233f136fee11549fe5f3827843f8ba1b89fe5a3b7a025ef5641e73163115a95b837224ccf8421a66b5c
+EBUILD umodpack-0.5_beta16-r2.ebuild 1085 SHA256 7b7ec69a1b044420b0c283dcbf94b276a32c3bc7ecfd50cc1fdaa18596e26b1c SHA512 07d6a509a69389e777bec22db4d2b886371e17311d1c8e0b39dc78e1ae6cbbba275544c267a5302e323ff1f65412f25ee629c8be5a6ce3675b30c4b81bfe7aa7 WHIRLPOOL ff4884be70eacba5709ddfb43d0386d66091747863c745d8327c24862eedacc4baa2daf287f34ee667e02ea606d833a467e95dd505774726334e724379a18dbb
+MISC ChangeLog 1805 SHA256 438de71db95101b3eae006ffd936b07b7bbb14c649e5464e9f3f4aeb15e4f06e SHA512 fe3fd35ca4adfd9b9fd61bd85a0a38eff4b71bf6daf18071b9bf1d19beecfe0b2850de16070af747fd77906d45cf892988334b8fde5b3f1752bd33b3ff92cdac WHIRLPOOL d0d5686c7a766324e21b607f46aa9d1a5252dca375b6470a4cb58c60594a353fc234972a501af3d7873e68579e6ea357a393fa9fb34469afcccd73bec619e146
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlIjZAQACgkQso7CE7gHKw2usQCeN9AvXdIa1jOeEArgDJTjN1i4
+lSIAoIBWLpNkLWu5i57cJEBPt3iA3xuB
+=KahP
+-----END PGP SIGNATURE-----
