@@ -1,6 +1,11 @@
 # ChangeLog for games-util/umodpack
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-util/umodpack/ChangeLog,v 1.12 2012/10/05 20:39:51 mr_bones_ Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-util/umodpack/ChangeLog,v 1.13 2013/09/01 15:57:52 idella4 Exp $
+
+*umodpack-0.5_beta16-r2 (01 Sep 2013)
+
+  01 Sep 2013; Ian Delaney <idella4@gentoo.org> +umodpack-0.5_beta16-r2.ebuild:
+  revbump -> EAPI 5, add invocation of tests
 
   05 Oct 2012; Michael Sterrett <mr_bones_@gentoo.org>
   umodpack-0.5_beta16-r1.ebuild:
